# pq-lang

./: .gitignore  .ocamlformat  README.md  dune-project  flake.nix  pq_lang.opam  pq_to_ocaml_rules.opam
.github/workflows/: ocaml.yml
bin_pq_eval_tools/: dune  main.ml
bin_pq_exec/: dune  main.ml
bin_pq_to_ocaml/: dune  main.ml
dune_extension/: dune  main.ml
evaluation/: .gitignore  increasing_pattern_nesting.py  increasing_qt_count.py  increasing_single_qt_fns.py
evaluation/eval_lib/: investigation.py  pq_intf.py
examples/: arithExpr.pq  iPolar.pq  listIncr.pq  listSet.pq  listSetAddtwo.pq  mobile.pq  setAddtwo.pq  setContains.pq  setFilter.pq  treeList.pq  treeListEmptyCount.pq  triangleFunction.pq
lib/: ast.ml  ast.mli  ast_executor.ml  ast_executor.mli  customType.ml  customType.mli  custom_types.ml  custom_types.mli  debug_tools.ml  debug_tools.mli  dune  expr.ml  expr.mli  flatPattern.ml  flatPattern.mli  flattener.ml  flattener.mli  frontend.ml  frontend.mli  lexer.mll  ocamlConverter.ml  ocamlConverter.mli  old_quotient_type_checking.ml  parser.mly  parsing_errors.ml  parsing_errors.mli  partial_evaluation.ml  partial_evaluation.mli  pattern.ml  pattern.mli  pattern_unification.ml  pattern_unification.mli  program.ml  program.mli  programExecutor.ml  programExecutor.mli  program_executor.ml  program_executor.mli  quotientType.ml  quotientType.mli  (+26 more)
lib_testing_utils/: dune  testing_utils.ml  testing_utils.mli
test/: dune  pq_lang_integration_interpreting.ml  pq_lang_integration_tests.ml  pq_lang_unit_tests.ml  pq_lang_unit_typeChecker.ml  test_ast.ml  test_ast_executor.ml  test_ast_executor_store.ml  test_expr.ml  test_frontend.ml  test_interpreting_integration.ml  test_lexer.ml  test_lexer_parser.ml  test_lexer_parser_ast_executor.ml  test_parser.ml  test_partial_evaluation.ml  test_pq_lang.ml  test_program.ml  test_programExecutor.ml  test_programExecutor_store.ml  test_program_executor.ml  test_program_executor_store.ml  test_quotientTypeChecker.ml  test_quotient_type_checking.ml  test_testing_utils.ml  test_typeChecker.ml  test_typing.ml  test_utils.ml  testing_utils.ml  testing_utils.mli  utils.ml  utils.mli
test/dune_integration/test_cases/test0/: listSet.pq
test/dune_integration/test_cases/test0-build-only/: dune  listSet.pq  main.ml
test/dune_integration/test_cases/test1-test-functionality/: dune  main.ml
test/pq_lang/integration/: dune  main.ml  test_interpreting.ml
test/pq_lang/unit/: dune  main.ml  test_expr.ml  test_flatPattern.ml  test_flattener.ml  test_lexer_parser.ml  test_ocamlConverter.ml  test_program.ml  test_programExecutor.ml  test_programExecutor_store.ml  test_quotientTypeChecker.ml  test_testing_utils.ml  test_typeChecker.ml  test_utils.ml
test/pq_to_ocaml/integration/: dune  main.ml
test/pq_to_ocaml/integration/test_cases/: .gitignore
test/pq_to_ocaml/integration/test_cases/negative/: listSetAddtwo.pq
test/pq_to_ocaml/integration/test_cases/positive/: listSet.pq  treeList.pq  treeListMap.pq
test/unit/: test_program.ml
