(library
 (public_name pq_lang.lib)
 (name pq_lang)
 (libraries core qcheck z3)
 (modules
  debug_tools
  utils
  vtype
  variant_types
  varname
  pattern
  expr
  unification
  quotientType
  custom_types
  program
  typing
  quotient_type_checking
  parsing_errors
  parser
  lexer
  frontend
  program_executor)
 (private_modules debug_tools)
 (preprocess
  (pps ppx_jane)))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --strict --explain))
