(library
 (public_name pq_lang)
 (name pq_lang)
 (libraries core qcheck z3)
 (modules
  debug_tools
  utils
  vtype
  variantType
  varname
  pattern
  expr
  unifier
  quotientType
  customType
  program
  flatPattern
  ocamlConverter
  smtIntf
  typeChecker
  quotientTypeChecker
  parsing_errors
  parser
  lexer
  frontend
  programExecutor)
 (private_modules debug_tools)
 (preprocess
  (pps ppx_jane)))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --strict --explain))
