(test
 (name test_pq_lang)
 (libraries pq_lang.lib ounit2 qcheck)
 (modules
  testing_utils
  test_pq_lang
  test_testing_utils
  test_utils
  test_expr
  test_program
  test_typing
  test_quotient_type_checking
  test_lexer_parser
  test_program_executor
  test_program_executor_store
  test_interpreting_integration))
