(test
 (name test_pq_lang)
 (libraries pq_lang.lib alcotest qcheck qcheck-alcotest)
 (modules
  testing_utils
  test_pq_lang
  test_testing_utils
  test_utils
  test_expr
  test_program
  test_typeChecker
  test_quotientTypeChecker
  test_lexer_parser
  test_programExecutor
  test_programExecutor_store
  test_interpreting_integration))
