(test
 (name pq_lang_unit_tests)
 (libraries
  pq_lang.lib
  pq_lang.testing_utils
  alcotest
  qcheck
  qcheck-alcotest)
 (modules
  pq_lang_unit_tests
  pq_lang_unit_testing_utils
  pq_lang_unit_utils
  pq_lang_unit_expr
  pq_lang_unit_program
  pq_lang_unit_typeChecker
  pq_lang_unit_quotientTypeChecker
  pq_lang_unit_lexer_parser
  pq_lang_unit_programExecutor
  pq_lang_unit_programExecutor_store))

(test
 (name pq_lang_integration_tests)
 (libraries
  pq_lang.lib
  pq_lang.testing_utils
  alcotest
  qcheck
  qcheck-alcotest)
 (modules pq_lang_integration_tests pq_lang_integration_interpreting))
