(test
 (name main)
 (libraries pq_lang pq_lang.testing_utils alcotest qcheck qcheck-alcotest)
 (modules
  main
  test_testing_utils
  test_utils
  test_expr
  test_program
  test_typeChecker
  test_flatPattern
  test_quotientTypeChecker
  test_lexer_parser
  test_programExecutor
  test_programExecutor_store
  test_ocamlConverter))
